--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <!-- <link href="https://fonts.googleapis.com/css?family=Muli&display=swap" rel="stylesheet"> -->
   <link href="https://fonts.googleapis.com/css?family=Montserrat:100i,200,300&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
 
 <body>
@@ -26,10 +27,10 @@
     <div id="carousel-text">
       <h1>The Internet We Deserve</h1>
     </div>
-    <img class="carousel-image" src="images/sv-cover.jpeg" />
-    <img class="carousel-image hidden" src="images/sv-garage.jpg" />
-    <img class="carousel-image hidden" src="images/sv-conference.jpg" />
-    <img class="carousel-image hidden" src="images/sv-pair-programming.jpg" />
+    <img class="carousel-image" src="images/sv-cover.jpeg" style="width: 100%" />
+    <img class="carousel-image hidden" src="images/sv-garage.jpg" style="width: 100%" />
+    <img class="carousel-image hidden" src="images/sv-conference.jpg" style="width: 100%" />
+    <img class="carousel-image hidden" src="images/sv-pair-programming.jpg" style="width: 100%" />
   </section>
 
   <header>
